--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Local dotenv for developers
+.env.local
+.env.development
+.env.production
+
 # vercel
 .vercel
 
