--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "mocha test/*.js --no-timeouts"
   },
   "dependencies": {
+    "chai": "^6.2.2",
+    "mocha": "^11.7.5",
     "next": "16.1.6",
     "nodemailer": "^8.0.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "selenium": "^2.20.0",
+    "selenium-webdriver": "^4.40.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
