--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^8.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "selenium": "^2.20.0",
     "selenium-webdriver": "^4.40.0"
   },
