--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "flowermarket",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "mocha test/*.js --no-timeouts"
+    "test": "mocha test/*.js --no-timeouts --parallel"
   },
   "dependencies": {
     "chai": "^6.2.2",
